--- a/src/assets/scss/layout/_inner-block-information.scss
+++ b/src/assets/scss/layout/_inner-block-information.scss
@@ -69,6 +69,7 @@
 
             > .container {
                 flex-shrink: 0;
+                word-break: break-all;
 
                 @include res-768 {
                     margin-bottom: 25px;
@@ -136,6 +137,8 @@
 
                     .view-list-container {
                         position: relative;
+                        flex-shrink: 0;
+                        
                         .view-list {
                             cursor: pointer;
                             text-align: left;
